# papayu

./: #U041e#U0422#U0427#U0401#U0422_#U041f#U041e_#U041f#U0420#U041e#U0413#U0420#U0410#U041c#U041c#U0415.md  #U0421#U0411#U041e#U0420#U041a#U0410_#U0418_#U041e#U0411#U041d#U041e#U0412#U041b#U0415#U041d#U0418#U042f.md  .gitignore  AUDIT.md  CHANGELOG.md  Makefile  PAPA YU — Сборка и запуск.command  PAPA YU.command  README.md  REFACTORING_CHANGELOG.md  env.openai.example  index.html  package-lock.json  package.json  start-with-openai.sh  vite.config.js  vite.config.ts  АУДИТ_ПРОГРАММЫ.md  ОТЧЁТ_УЛУЧШЕНИЙ.md  СИНХРОНИЗАЦИЯ_ПАПОК.md  Установить в Программы.command
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json  personal-automation.json
src-tauri/config/: llm_domain_note_schema.json  llm_online_answer_schema.json  llm_response_schema.json  llm_response_schema_v2.json  llm_response_schema_v3.json  llm_weekly_report_schema.json  verify_allowlist.json
src-tauri/icons/: README.md
src-tauri/src/: agent_sync.rs  audit_log.rs  context.rs  lib.rs  main.rs  memory.rs  net.rs  patch.rs  policy_engine.rs  protocol.rs  secrets_guard.rs  snyk_sync.rs  store.rs  types.rs  verify.rs
src-tauri/src/commands/: agentic_run.rs  analyze_project.rs  apply_actions.rs  apply_actions_tx.rs  auto_check.rs  design_trends.rs  folder_links.rs  generate_actions.rs  generate_actions_from_report.rs  get_project_profile.rs  llm_planner.rs  mod.rs  multi_provider.rs  preview_actions.rs  project_content.rs  projects.rs  propose_actions.rs  rag_query.rs  (+9 more)
(+169 files in other folders)
