[package]
name = "papa-yu"
version = "2.4.5"
default-run = "papa-yu"
edition = "2021"
description = "PAPA YU — анализ и исправление проектов"

[lib]
name = "papa_yu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonschema = "0.18"
sha2 = "0.10"
hex = "0.4"
diffy = "0.4"
url = "2"
scraper = "0.20"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
